# langchain-ecs-boilerplate

./: .dockerignore  .gitignore  Dockerfile  app.py  pyproject.toml
langchain_ecs_boilerplate/: langchain_ecs_boilerplate_stack.py
src/: create_index.py  main.py
tests/unit/: test_python_cdk_boilerplate_stack.py
